# sps-template-server/model/request/sys_signature.go
@@ -1,0 +1,7 @@
+package request
+
+type ChangeSignaturePasswordStruct struct {
+	Id			float64	`json:"id"`
+	Password	string	`json:"password"`
+	NewPassword string	`json:"newPassword"`
+}
